--- a/毕设/文献综述大纲.md
+++ b/毕设/文献综述大纲.md
@@ -180,10 +180,6 @@ Naseer M., Khan S. H., Rahman S., et al. Task-Generalizable Adversarial Attack B
 
 Naseer M., Khan S. H., Khan H. M., et al. Cross-Domain Transferability of Adversarial Perturbations[C]. Conference on Neural Information Processing Systems. 2019: 12885-12895.
 
-Lu Y., Jia Y., Wang J., et al. Enhancing Cross-Task Black-Box Transferability of Adversarial Examples with Dispersion Reduction[C]. IEEE/CVF Conference on Computer Vision and Pattern Recognition. 2020: 937-946.
-
-Nakka K. K., Salzmann M. Learning Transferable Adversarial Perturbations[C]. Conference on Neural Information Processing Systems. 2021: 13950-13962.
-
 ## 2.1 跨模型迁移性增强方法
 
 对抗样本的跨模型迁移性是指同一个对抗样本能够成功地欺骗不同结构或训练数据不同的模型。对此现象的原因，学术界已有多种解释。Nguyen等人提出，不同模型在训练过程中可能会捕捉到相似的图像特征，这为对抗样本的迁移提供了可能性。Goodfellow等则从模型权重的角度分析，认为由于训练数据的相似性，不同模型的权重趋向于一致，从而促进了对抗样本的迁移。此外，Dong等学者强调，模型的决策边界是对抗样本生成的关键因素。
@@ -242,29 +238,19 @@ Han D., Jia X., Bai Y., et al. OT-Attack: Enhancing Adversarial Transferability 
 
 ## 2.2 跨提示迁移性增强方法
 
-大纲：
+近年来，随着对跨模型迁移性的深入研究，一些工作发现针对特定任务生成的图像对抗扰动可能会在其他任务中产生意料之外的影响。例如，用于图像分类任务生成的对抗样本，在应用于图像分割任务时，仍然能够干扰模型的输出。这一现象揭示了对抗扰动的跨任务迁移性，即使对抗样本专为特定任务优化生成，其影响也可能扩展到其他任务，挑战了模型的鲁棒性和泛化能力。
 
-介绍跨提示迁移性的概念
+在视觉语言模型的研究中，研究者们进一步提出了跨提示迁移性的概念。相比于跨任务迁移性，跨提示迁移性更为重要，因为它更贴近视觉语言模型的实际应用场景。这种迁移性旨在开发能够在多个不同提示条件下均有效的对抗样本，而非仅限于单一提示。提示是视觉语言模型适配任务的核心驱动力，通过不同的文本提示，模型能够高效完成多样化的任务。与跨任务迁移性主要关注任务类型的多样性不同，跨提示迁移性强调任务内部因提示变化而导致的细粒度差异。这种差异在视觉语言模型中尤为显著。例如，在视觉问答任务中，提示通常以具体问题的形式呈现，如“图像中有多少只鸟？”或“图像中的物体是什么颜色？”；而在图像描述任务中，提示则更为单一，如“为这张图片生成一段描述”。研究跨提示迁移性，不仅能够加深对模型在不同提示下表现的理解，还能更全面地评估其在真实场景中的适配能力，推动模型在实际应用中的稳健性发展。
 
-介绍跨任务迁移性和跨提示迁移性的区别；
-
-介绍传统模型的跨任务迁移性的研究；
-
-介绍方法；
-
-内容：
-
-视觉语言模型凭借其对文本提示的灵活适配能力，在无需架构调整的情况下即可完成多种视觉任务，例如图像分类、图像描述和视觉问答等。这种模型通过将视觉信息和文本提示进行联合建模，展现了强大的任务泛化能力。然而，并非所有任务都可以单纯依赖文本提示完成，例如视觉定位任务需要额外的架构设计和大量预训练支持。Minigpt-v2 和 Kosmos-2 等模型正是通过大规模预训练才具备了执行视觉定位的能力。因此，许多研究着重于对抗样本的跨提示迁移性进行研究。
+Bailey等人研究了视觉语言模型在图像输入下的安全性问题，重点探讨了“图像劫持”现象，即通过对抗图像操控模型的推理输出。在跨提示迁移性的分析中，他们设计了特定的字符串攻击，并采用不同的范数约束生成对抗图像。这些对抗图像随后被用于测试其在未见上下文中的表现。实验结果表明，这些图像在跨提示迁移性方面表现出显著的效果。Lu等人提出了一种名为AnyDoor的后门攻击方法，旨在无需修改或接触训练数据的情况下，通过测试阶段的后门注入来操控模型行为。AnyDoor通过优化包含触发器和无触发器场景的损失函数，动态调整权重以平衡两种场景下的性能，从而实现了良好的跨提示迁移能力。实验结果显示，AnyDoor在不同触发提示和目标字符串对下均表现出较高的攻击成功率，即便面对随机选择的触发提示和目标字符串对，其迁移性能仍然优异。尽管前述两种方法在跨提示迁移性方面进行了初步探索，但并未实现显著的突破。为进一步提高对抗样本在不同提示下的迁移性，Luo等人提出了一种名为跨提示攻击（Cross-Prompt Attack，简称CroPA）的方法。该方法的核心思路是在尽可能多的文本提示下生成图像扰动，通过在文本嵌入中加入梯度扰动，使得图像扰动可以在更广泛的文本嵌入空间内进行生成。这样的策略显著增强了对抗图像的跨提示迁移能力，从而能够在更多的情境和任务中表现出更高的攻击效果。通过这一创新，CroPA有效克服了以往方法在跨提示迁移性方面的局限性。
 
 参考文献：
 
 （传统模型的跨任务迁移性）
 
-（视觉定位）
+Lu Y., Jia Y., Wang J., et al. Enhancing Cross-Task Black-Box Transferability of Adversarial Examples with Dispersion Reduction[C]. IEEE/CVF Conference on Computer Vision and Pattern Recognition. 2020: 937-946.
 
-Chen J., Zhu D., Shen X., et al. MiniGPT-v2: Large Language Model as A Unified Interface for Vision-Language Multi-Task Learning[EB/OL]. arXiv preprint arXiv:2310.09478, 2023.
-
-Peng Z., Wang W., Dong L., et al. Kosmos-2: Grounding Multimodal Large Language Models to the World[EB/OL]. arXiv preprint arXiv:2306.14824, 2023.
+Nakka K. K., Salzmann M. Learning Transferable Adversarial Perturbations[C]. Conference on Neural Information Processing Systems. 2021: 13950-13962.
 
 （VLMs的跨提示迁移性）
 
@@ -276,23 +262,21 @@ Luo H., Gu J., Liu F., et al. An Image Is Worth 1000 Lies: Transferability of Ad
 
 ## 2.3 跨数据迁移性增强方法
 
-大纲：
+Mopuri和Moosavi-Dezfooli等研究表明，对抗扰动即使被添加到不同的图像上，仍然能够有效地误导模型。这种现象反映了对抗扰动的迁移能力，即对一个数据集生成的对抗样本可以在另一个数据集上保持干扰效果。迁移性进一步表明，对抗样本的影响超越了生成时的数据分布限制，能够跨越数据集间的域差异，对不同分布下的模型输出造成干扰。
 
-介绍跨跨数据迁移性的定义；
+随着视觉语言模型在自然语言处理和计算机视觉领域展现出卓越性能，研究者开始关注其对抗样本的跨数据迁移性。鉴于视觉语言模型具备处理多模态数据的能力，相关研究将针对视觉语言模型的对抗样本迁移性分为两类：跨图像迁移性和跨语料库迁移性。跨图像迁移性是指针对特定图像生成的对抗样本能够在其他图像上继续有效，误导模型的预测结果。这种迁移性表明，对抗扰动具有一定的通用特性，不局限于单一图像，而是能够对不同图像产生影响。跨语料库迁移性是指针对某一语料库生成的对抗样本能够在其他语料库中保持有效性，对模型的文本理解或生成能力产生干扰。这种迁移性展示了对抗扰动在文本数据中的适用范围，可能跨越不同语料库的语言分布或风格差异。
 
-介绍当前视觉语言模型的跨数据迁移性分为几类；
-
-介绍方法；
-
-内容：
-
-
+AnyDoor 方法的提出进一步推动了对抗样本迁移性研究，特别是在多模态大语言模型中的应用。作为一种后门攻击技术，AnyDoor 利用通用对抗扰动，实现对视觉和语言模态的联合干扰。通过在图像模态中注入通用扰动并结合文本触发策略，该方法展现了卓越的跨模态迁移能力和适应性。实验结果表明，无论在自然图像还是生成图像数据集（如 VQAv2、SVIT 和 DALL-E）中，通用扰动均能成功引发目标模型的预设输出。这些发现表明，跨图像迁移性在多模态场景中具有广泛的适用性和高效性。进一步的研究还验证了视觉对抗样本在多模态模型中的跨语料库迁移能力。Qi 和 Wang 的实验表明，即使仅基于少量有害句子生成对抗图像，这些扰动仍可促使模型生成超出原始语料库范围的有害内容，例如虚假信息传播和暴力指南。此外，Wang 和Ying等人通过联合优化对抗图像前缀和文本后缀，显著提高了模型在复杂语料库场景下生成有害内容的概率。
 
 参考文献：
 
 （传统的跨数据迁移性）
 
-视觉语言模型：
+**Mopuri K. R., Garg T., Radhakrishnan V. B. Fast Feature Fool: A Data Independent Approach to Universal Adversarial Perturbations[C]. British Machine Vision Conference. 2017:** 
+
+Moosavi-Dezfooli S. M., Fawzi A., Fawzi O., et al. Universal Adversarial Perturbations[C]. 2017: 86-94.
+
+（跨视觉语言模型）
 
 图像
 
@@ -306,15 +290,14 @@ Wang R., Ma X., Zhou H., et al. White-Box Multimodal Jailbreaks Against Large Vi
 
 Ying Z., Liu A., Zhang T., et al. Jailbreak Vision Language Models via Bi-Modal Adversarial Prompt[EB/OL]. arXiv preprint arXiv:2406.04031, 2024.
 
-综述：
-
-Bordes F., Pang R. Y., Ajay A., et al. An Introduction to Vision-Language Modeling[EB/OL]. arXiv preprint arXiv:2405.17247, 2024.
-
-Zhang C., Xu X., Wu J., et al. Adversarial Attacks of Vision Tasks in the Past 10 Years: A Survey[EB/OL]. arXiv preprint arXiv:2410.23687, 2024.
-
 # 3 现存问题与发展趋势
 
 
 
 # 4 结论
 
+
+
+Bordes F., Pang R. Y., Ajay A., et al. An Introduction to Vision-Language Modeling[EB/OL]. arXiv preprint arXiv:2405.17247, 2024.
+
+Zhang C., Xu X., Wu J., et al. Adversarial Attacks of Vision Tasks in the Past 10 Years: A Survey[EB/OL]. arXiv preprint arXiv:2410.23687, 2024.
