--- a/毕设/开题报告大纲.md
+++ b/毕设/开题报告大纲.md
@@ -10,9 +10,11 @@
 
 ## 1.1 论文选题背景
 
-视觉语言模型（Visual-Language Models, VLMs）结合了计算机视觉与自然语言处理技术，旨在实现图像与文本的多模态信息理解。它们在图像描述生成（Image Captioning, IC）、视觉问答（Visual Question Answering, VQA）和视觉定位（Visual Grounding, VG）等跨模态任务中展现了巨大的潜力。近年来，Transformer架构在自然语言处理和计算机视觉领域的广泛应用，为视觉语言模型的发展提供了强大支持。得益于Transformer的自注意力机制，模型能够同时处理图像与文本数据，为多模态信息理解提供了创新解决方案。因此，基于Transformer的视觉语言模型已逐渐成为多模态任务研究的主流，并在多个应用领域取得了显著进展。随着BERT模型（Bidirectional Encoder Representations from Transformers）在自然语言处理领域的广泛应用，许多研究者开始将其架构扩展到图像与文本结合的跨模态任务中。Visual-BERT和ViLBERT是这一探索的代表性模型，它们首次将Transformer架构应用于视觉语言任务，尤其在掩码语言建模和图像-文本匹配任务中取得了显著成果。这些模型通过Transformer的自注意力机制，成功捕捉图像与文本之间的相互关系，促进了模型对多模态信息的理解。这些开创性工作为后续研究提供了宝贵的经验，并为进一步的发展奠定了坚实的基础。
+视觉语言模型（Visual-Language Models, VLMs）融合了计算机视觉与自然语言处理技术，旨在实现图像与文本的多模态信息理解。它们在图像描述生成（Image Captioning, IC）、视觉问答（Visual Question Answering, VQA）和视觉定位（Visual Grounding, VG）等跨模态任务中展现了巨大的潜力。近年来，Transformer架构在自然语言处理和计算机视觉领域的广泛应用，为视觉语言模型的发展提供了强大支持。得益于Transformer的自注意力机制的优势，这些模型能够同时处理图像与文本数据，为多模态信息理解提供了创新解决方案。因此，基于Transformer的视觉语言模型已逐渐成为多模态任务研究的主流，并在多个应用领域取得了显著进展。许多研究者开始将BERT（Bidirectional Encoder Representations from Transformers）架构扩展到图像与文本结合的跨模态任务中。其中，Visual-BERT和ViLBERT是这一探索的代表性模型，它们首次将Transformer架构应用于视觉语言任务，尤其在掩码语言建模和图像-文本匹配任务中取得了显著成果。这些模型通过Transformer的自注意力机制，成功捕捉图像与文本之间的相互关系，促进了模型对多模态信息的理解。
 
-随着视觉语言模型的快速发展，对抗攻击的研究重点经历了显著的转移。早期的对抗攻击主要集中在单一模态的视觉模型上，通过微小的输入扰动来误导模型的视觉识别能力。然而，随着视觉语言模型在多模态理解和推理任务中展现出卓越的能力，攻击者开始将注意力转向这些更为复杂的模型。VLMs结合了视觉信息处理和自然语言理解的能力，这不仅增加了它们的实用性，也引入了新的安全挑战。攻击者现在不仅可以考虑如何操纵图像和文本输入，还可以考虑设计不同的攻击效果。因此，识别这些潜在风险至关重要，不仅有助于提升模型的鲁棒性，还能够帮助开发者深入洞察模型的弱点，从而设计出更加有效的防御策略。在自动驾驶和医疗诊断等高风险场景中，视觉语言模型的应用对安全性提出了极高的要求。一旦模型遭受对抗攻击，可能导致关键任务中的严重错误。例如，在自动驾驶中，模型可能误识交通标志，从而引发交通事故；在医疗诊断中，模型在医学影像辅助诊断中出现偏差，可能导致误诊或漏诊，危及患者生命。这些潜在风险凸显了提升模型安全性的重要性，以确保其在关键领域的可靠性和稳定性。此外，一些攻击者利用对抗样本诱导模型生成歧视性内容或侵犯个人隐私，这可能对社会造成深远的负面影响。通过研究对抗攻击，能够揭示模型在应对此类攻击时的潜在弱点，进而开发更有效的防护措施。这不仅有助于增强模型的鲁棒性，还能确保技术符合伦理规范，促进技术的健康发展。
+伴随着视觉语言模型快速发展的同时，对抗攻击研究也经历了重要转变。早期的对抗攻击主要集中在单一模态的视觉模型上，通过微小的输入扰动来误导模型的视觉识别能力。然而，随着视觉语言模型在多模态理解和推理任务中展现出卓越的能力，攻击者开始将注意力转向这些更为复杂的模型。由于VLMs结合了视觉信息处理和自然语言理解的能力，不仅提升了了它们的实用性，也引入了新的安全挑战。攻击者现在不仅可以考虑如何操纵图像和文本输入，还可以考虑设计不同的攻击效果。因此，识别这些潜在风险十分重要，不仅有助于提升模型的鲁棒性，还能够帮助开发者深入洞察模型的弱点，从而设计出更加有效的防御策略。尤其是在自动驾驶和医疗诊断等高风险场景中，视觉语言模型的应用对安全性提出了极高的要求。一旦这些关键领域内使用的视觉语言模型遭受对抗攻击，可能导致关键任务中的严重错误。例如，在自动驾驶中，模型可能误识交通标志，从而引发交通事故；在医疗诊断中，模型在医学影像辅助诊断中出现偏差，可能导致误诊或漏诊，危及患者生命。这些潜在风险凸显了提升模型安全性的重要性，以确保其在关键领域的可靠性和稳定性。此外，一些恶意用户利用对抗样本诱导模型生成歧视性内容或侵犯个人隐私，这可能对社会造成深远的负面影响。因此，通过深入研究对抗攻击，可以揭示模型在应对此类攻击时的潜在弱点，进而开发更有效的防护措施。这不仅有助于增强模型的鲁棒性，还能确保技术符合伦理规范，促进技术的健康发展。
+
+对抗样本的存在引起了人们对机器学习系统稳健性和可靠性的广泛关注。尤其引人注目的是对抗样本的迁移性，即一个模型上生成的对抗样本能够误导结构不同的其他模型。这一特性大大降低了攻击者的攻击难度，因为他们无需了解目标模型的具体架构和参数。更令人关注的是，学者们发现，对抗扰动即使被应用到不同的图像上，依然能够成功误导模型，表明对抗扰动具有一定的通用性，能够跨越图像内容发挥作用。此外，研究还发现，针对特定任务生成的图像对抗扰动，在其他任务中也能产生影响。这意味着，对抗样本不仅能够在同一任务的不同模型间迁移，还能跨任务挑战模型的泛化能力。
 
 Vaswani A., Shazeer N., Parmar N., et al. Attention is All you Need[C]. Conference on Neural Information Processing Systems. 2017: 5998-6008.
 
@@ -24,15 +26,17 @@ Lu J., Batra D., Parikh D., et al. ViLBERT: Pretraining Task-Agnostic Visiolingu
 
 ## 1.2 研究现状概述
 
-### 1.2.1 跨模型迁移性增强方法研究
+本文将介绍关于视觉语言模型中对抗样本在跨模型、跨提示和跨数据迁移性方面的研究进展。对抗样本的跨模型迁移性是指在一个模型上生成的对抗样本能够误导其他结构不同的模型；跨提示迁移性指的是对抗样本不仅能在单一提示下误导模型，还能在其他的文本提示下保持误导有效性；针对视觉语言模型的跨数据迁移性分为两类：跨图像迁移性和跨语料库迁移性。跨图像迁移性是指针对特定图像生成的对抗样本能够在其他图像上继续有效，误导模型的预测结果。跨语料库迁移性是指针对某一语料库生成的对抗样本能够在诱导模型输出同一语义而不再该语料库中的内容。
+
+### 1.2.1 关于跨模型迁移性的研究
 
 
 
-### 1.2.2 跨提示迁移性增强方法研究
+### 1.2.2 关于跨提示迁移性的研究
 
 
 
-### 1.2.3 跨数据迁移性增强方法研究
+### 1.2.3 关于跨数据迁移性的研究
 
 
 
@@ -46,7 +50,7 @@ Lu J., Batra D., Parikh D., et al. ViLBERT: Pretraining Task-Agnostic Visiolingu
 
 ## 2.2 基于增强文本提示的对抗图像生成方法技术路线
 
-## 2.3 基于图像实体的集成对抗攻击技术路线
+## 2.3 针对图像实体的集成对抗攻击技术路线
 
 # 3 论文工作安排计划
 
@@ -56,6 +60,6 @@ Lu J., Batra D., Parikh D., et al. ViLBERT: Pretraining Task-Agnostic Visiolingu
 
 ### 3.2.1 
 
-### 3.2.2
+### 3.2.2 
 
 # 参考文献
