--- a/毕设/开题报告大纲.md
+++ b/毕设/开题报告大纲.md
@@ -28,7 +28,9 @@ Lu J., Batra D., Parikh D., et al. ViLBERT: Pretraining Task-Agnostic Visiolingu
 
 ## 1.2 研究现状概述
 
-本文将介绍关于视觉语言模型中对抗样本在跨模型、跨提示和跨数据迁移性方面的研究进展。对抗样本的跨模型迁移性是指在一个模型上生成的对抗样本能够误导其他结构不同的模型；跨提示迁移性指的是对抗样本不仅能在单一提示下误导模型，还能在其他的文本提示下保持误导有效性；针对视觉语言模型的跨数据迁移性分为两类：跨图像迁移性和跨语料库迁移性。跨图像迁移性是指针对特定图像生成的对抗样本能够在其他图像上继续有效，误导模型的预测结果。跨语料库迁移性是指针对某一语料库生成的对抗样本能够在诱导模型输出同一语义而不再该语料库中的内容。
+本文将介绍视觉语言模型中对抗样本在跨模型、跨提示和跨数据迁移性方面的研究进展。**跨模型迁移性**指的是在一个模型上生成的对抗样本能够成功误导其他结构不同的模型。**跨提示迁移性**则强调，对抗样本不仅能在单一文本提示下有效干扰模型，还能在不同文本提示下维持其误导效果。针对视觉语言模型的**跨数据迁移性**可进一步细分为两类： **跨图像迁移性** 和 **跨语料库迁移性**。其中，跨图像迁移性是指为特定图像生成的对抗样本仍然能够有效地干扰其他图像，从而影响模型预测结果。而跨语料库迁移性则意味着，为某一特定语料库生成的对抗样本能够诱导模型输出同一语义，即便该内容并不包含于原始语料库中。
+
+通过探讨这些不同类型的迁移现象，我们可以深入理解对抗样本如何挑战视觉语言系统，并为开发更强大的防御策略奠定基础。
 
 ### 1.2.1 关于跨模型迁移性的研究
 
