--- a/毕设/开题报告大纲.md
+++ b/毕设/开题报告大纲.md
@@ -28,21 +28,25 @@ Lu J., Batra D., Parikh D., et al. ViLBERT: Pretraining Task-Agnostic Visiolingu
 
 ## 1.2 研究现状概述
 
-本文将介绍视觉语言模型中对抗样本在跨模型、跨提示和跨数据迁移性方面的研究进展。**跨模型迁移性**指的是在一个模型上生成的对抗样本能够成功误导其他结构不同的模型。**跨提示迁移性**则强调，对抗样本不仅能在单一文本提示下有效干扰模型，还能在不同文本提示下维持其误导效果。针对视觉语言模型的**跨数据迁移性**可进一步细分为两类： **跨图像迁移性** 和 **跨语料库迁移性**。其中，跨图像迁移性是指为特定图像生成的对抗样本仍然能够有效地干扰其他图像，从而影响模型预测结果。而跨语料库迁移性则意味着，为某一特定语料库生成的对抗样本能够诱导模型输出同一语义，即便该内容并不包含于原始语料库中。
+本文将介绍视觉语言模型中对抗样本在跨模型、跨提示和跨数据迁移性方面的研究进展。跨模型迁移性指的是在一个模型上生成的对抗样本能够成功误导其他结构不同的模型。跨提示迁移性则强调，对抗样本不仅能在单一文本提示下有效干扰模型，还能在不同文本提示下维持其误导效果。针对视觉语言模型的跨数据迁移性可进一步细分为两类： 跨图像迁移性 和 跨语料库迁移性。其中，跨图像迁移性是指为特定图像生成的对抗样本仍然能够有效地干扰其他图像，从而影响模型预测结果。而跨语料库迁移性则意味着，为某一特定语料库生成的对抗样本能够诱导模型输出同一语义，即便该内容并不包含于原始语料库中。
 
 通过探讨这些不同类型的迁移现象，我们可以深入理解对抗样本如何挑战视觉语言系统，并为开发更强大的防御策略奠定基础。
 
 ### 1.2.1 关于跨模型迁移性的研究
 
+在视觉语言模型领域，对抗样本的跨模型迁移性备受关注。由于这类模型不仅处理视觉特征，还需结合语言信息，其复杂性使得增强跨模型迁移性的方法更具挑战性。针对这一问题，研究者们提出了一系列针对视觉语言模型的优化策略，提升对抗样本在视觉语言模型间的迁移效果。
 
+在集成模型方向，Guo等人提出的 AdvDiffVLM 方法使用自适应集成梯度估计（Adaptive Ensemble Gradient Estimation）方法。该方法通过多个代理模型估计目标模型的梯度信息，从而在扩散模型生成对抗图像的过程中有效嵌入对抗语义。Niu等人设计了一种基于最大似然的算法，用于生成图像越狱提示以攻击视觉语言模型。他们采用了多个代理模型，包括基于 Vicuna-7B、Vicuna-13B 和 LLaMA-2-7B 的 MiniGPT-4。Wu等人则通过整合 ViT-B/32、ViT-B/16、ViT-L/14 和 ViT-L/14@336px 等模型，对多模态智能体进行幻觉攻击与目标误导攻击。Dong等人进一步提出，在生成图像扰动时以 ViT-B/16、CLIP 和 BLIP-2 作为代理模型，并结合 SSA-CWA （Spectrum Simulation Attack-Common Weakness Attack）进行攻击，以提升对抗样本的迁移性。此外，Zhao等人提出采用随机梯度无关（RGF, Random Gradient-Free）方法来估计梯度，成功攻击了未见过的视觉语言模型。从模型对齐的角度，Ma 等人提出了一种微调源模型（Source Model）的策略，使其输出与一组独立的见证模型（Witness Models）的输出接近，然后利用源模型生成对抗样本，从而提升跨模型迁移能力。Lu 等人提出了 SGA（Set-level Guidance Attack） 方法，通过结合跨模态交互和对齐保持的数据增强技术，生成可在黑盒环境中高效攻击多个模型的对抗样本。Han 等人则从最优传输（Optimal Transport, OT）理论出发，将图像和文本集合的特征视为两个分布，通过最优传输计算两者间的最优映射关系，有效缓解过拟合问题，并提升对抗样本的迁移性。
+
+然而，这些方法未能充分利用文本模态的能力，使得对抗攻击主要依赖于图像模态的信息，导致生成的对抗图像过于专注于特定模型的视觉处理弱点，进而影响跨模型迁移性。
 
 ### 1.2.2 关于跨提示迁移性的研究
 
+近年来，随着对跨模型迁移性的深入研究，一些工作发现针对特定任务生成的图像对抗扰动可能会在其他任务中产生意料之外的影响。例如，用于图像分类任务生成的对抗样本，在应用于图像分割任务时，仍然能够干扰模型的输出。这一现象揭示了对抗扰动的跨任务迁移性，即使对抗样本专为特定任务优化生成，其影响也可能扩展到其他任务，挑战了模型的鲁棒性和泛化能力。
 
+在视觉语言模型的研究中，研究者们进一步提出了跨提示迁移性的概念，即对抗样本不仅能在单一提示下误导模型，还能在其他的文本提示下保持误导有效性。相比于跨任务迁移性，跨提示迁移性更为重要，因为它更贴近视觉语言模型的实际应用场景。这种迁移性旨在开发能够在多个不同提示条件下均有效的对抗样本，而非仅限于单一提示。提示是视觉语言模型适配任务的核心驱动力，通过不同的文本提示，模型能够高效完成多样化的任务。与跨任务迁移性主要关注任务类型的多样性不同，跨提示迁移性强调任务内部因提示变化而导致的细粒度差异。这种差异在视觉语言模型中尤为显著。例如，在视觉问答任务中，提示通常以具体问题的形式呈现，如“图像中有多少只鸟？”或“图像中的物体是什么颜色？”；而在图像描述任务中，提示则更为单一，如“为这张图片生成一段描述”。研究跨提示迁移性，不仅能够加深对模型在不同提示下表现的理解，还能更全面地评估其在真实场景中的适配能力，推动模型在实际应用中的稳健性发展。
 
-### 1.2.3 关于跨数据迁移性的研究
-
-
+在文本描述攻击上，Bailey等人研究了视觉语言模型在图像输入下的安全性问题，重点探讨了“图像劫持”现象，即通过对抗图像操控模型的推理输出。在跨提示迁移性的分析中，他们设计了特定的字符串攻击，并采用不同的范数约束生成对抗图像。这些对抗图像随后被用于测试其在未见上下文中的表现。实验结果表明，这些图像在跨提示迁移性方面表现出显著的效果。为进一步提高对抗样本在不同提示下的迁移性，Luo等人提出了一种名为跨提示攻击（Cross-Prompt Attack，CroPA）的方法。该方法的核心思路是在尽可能多的文本提示下生成图像扰动，通过在文本嵌入中加入梯度扰动，使得图像扰动可以在更广泛的文本嵌入空间内进行生成。部分研究将图像嵌入作为提升跨提示迁移性的切入点。例如，Dong等人提出一种图像嵌入攻击方法，旨在通过增加对抗图像与原始图像嵌入之间的差异来误导模型。针对可能导致模型输出其他正确描述的风险，Zhao等人提出结合扩散模型将目标文本转换为图像，并通过拉近对抗图像与生成图像嵌入的相似度来进行优化。然而，该种方法在涉及多种对象或者背景复杂的图像中，难以覆盖全部要素，导致跨提示迁移性性能不好。
 
 ## 1.3 研究目标与创新性
 
