--- a/毕设/开题报告大纲.md
+++ b/毕设/开题报告大纲.md
@@ -36,7 +36,7 @@ Lu J., Batra D., Parikh D., et al. ViLBERT: Pretraining Task-Agnostic Visiolingu
 
 在视觉语言模型领域，对抗样本的跨模型迁移性引起了广泛关注。由于这类模型不仅处理视觉特征，还需结合语言信息，其复杂性使得增强跨模型迁移性的方法更具挑战性。为了解决这一问题，研究者们提出了一系列优化策略，以提升对抗样本在视觉语言模型间的迁移效果。
 
-在集成模型方向，Guo等人提出的 AdvDiffVLM 方法使用自适应集成梯度估计（Adaptive Ensemble Gradient Estimation）来获得目标模型的梯度信息。这一方法通过多个代理模型有效嵌入语义，从而生成对抗图像。Niu等人设计了一种基于最大似然的算法，用于生成图像越狱提示以攻击视觉语言模型。他们采用了包括 Vicuna-7B、Vicuna-13B 和 LLaMA-2-7B 基础上的 MiniGPT-4作为代理模型。此外，Wu等人则通过整合 ViT-B/32、ViT-B/16、ViT-L/14 和 ViT-L/14@336px 等模型，对多模态智能体进行幻觉攻击与目标误导攻击。Dong等人进一步提出，在生成图像扰动时以 ViT-B/16、CLIP 和 BLIP-2 作为代理模型，并结合 SSA-CWA （Spectrum Simulation Attack-Common Weakness Attack）进行攻击，以提升对抗样本的跨模型迁移性。同时，Zhao等人提出采用随机梯度无关（Random Gradient-Free, RGF）方法来估计梯度，成功攻击了未见过的视觉语言模型。从模型对齐的角度，Ma 等人提出了一种微调源模型（Source Model）的策略，使其输出与一组独立的见证模型（Witness Models）的输出接近，然后利用源模型生成对抗样本，从而提升跨模型迁移能力。而Lu 等人提出了 SGA（Set-level Guidance Attack） 方法，通过结合跨模态交互和对齐保持的数据增强技术，生成可在黑盒环境中高效攻击多个模型的对抗样本。Han 等人则从最优传输（Optimal Transport, OT）理论出发，将图像和文本集合的特征视为两个分布，通过最优传输计算两者间的最优映射关系，有效缓解过拟合问题，并提升对抗样本的迁移性。
+在集成模型方向，Guo等人提出的 AdvDiffVLM 方法使用自适应集成梯度估计（Adaptive Ensemble Gradient Estimation）来获得目标模型的梯度信息。这一方法通过多个代理模型有效嵌入语义，从而生成对抗图像。Niu等人设计了一种基于最大似然的算法，用于生成图像越狱提示以攻击视觉语言模型。他们采用了包括 Vicuna-7B、Vicuna-13B 和 LLaMA-2-7B 基础上的 MiniGPT-4作为代理模型。此外，Wu等人则通过整合 ViT-B/32、ViT-B/16、ViT-L/14 等 等模型，对多模态智能体进行幻觉攻击与目标误导攻击。Dong等人进一步提出，在生成图像扰动时以 ViT-B/16、CLIP 和 BLIP-2 作为代理模型，并结合 SSA-CWA ）进行攻击，以提升对抗样本的跨模型迁移性。同时，Zhao等人提出采用随机梯度无关方法来估计梯度，成功攻击了未见过的视觉语言模型。从模型对齐的角度，Ma 等人提出了一种微调源模型（的策略，使其输出与一组独立的见证模型的输出接近，然后利用源模型生成对抗样本，从而提升跨模型迁移能力。而Lu 等人提出了 SGA 方法，通过结合跨模态交互和对齐保持的数据增强技术，生成可在黑盒环境中高效攻击多个模型的对抗样本。Han 等人则从最优传输理论出发，将图像和文本集合的特征视为两个分布，通过最优传输计算两者间的最优映射关系，有效缓解过拟合问题，并提升对抗样本的迁移性。
 
 尽管上述方法取得了一定进展，但仍未充分挖掘文本模态所具备的能力。这导致当前的大多数对抗攻击依赖于图像模态的信息，使得生成的对抗图像往往集中于源模型的视觉处理缺陷，从而影响跨模型迁移能力。因此，后续的方法需要考虑如何充分利用文本模态的能力，以提高跨模型迁移能力。
 
@@ -52,15 +52,17 @@ Lu J., Batra D., Parikh D., et al. ViLBERT: Pretraining Task-Agnostic Visiolingu
 
 ### 1.2.3 关于跨数据迁移性的研究
 
-随着视觉语言模型在自然语言处理和计算机视觉领域展现出卓越性能，研究者开始关注其对抗样本的跨数据迁移性。鉴于视觉语言模型具备处理多模态数据的能力，相关研究将针对视觉语言模型的对抗样本迁移性分为两类：跨图像迁移性和跨语料库迁移性。跨图像迁移性是指针对特定图像生成的对抗样本能够在其他图像上继续有效，误导模型的预测结果。这种迁移性表明，对抗扰动具有一定的通用特性，不局限于单一图像，而是能够对不同图像产生影响。跨语料库迁移性是指针对某一语料库生成的对抗样本能够在诱导模型输出同一语义而不再该语料库中的内容，对模型的文本理解或生成能力产生干扰。这种迁移性展示了对抗扰动在文本数据中的适用范围，可能跨越不同语料库的语言分布或风格差异。
+随着视觉语言模型在自然语言处理和计算机视觉领域展现出卓越性能，研究者开始关注其对抗样本的跨数据迁移性。鉴于视觉语言模型具备处理多模态数据的能力，相关研究将针对视觉语言模型的对抗样本迁移性分为两类：跨图像迁移性和跨语料库迁移性。跨图像迁移性是指针对特定图像生成的对抗样本能够在其他图像上继续有效，误导模型的预测结果。跨语料库迁移性是指针对某一语料库生成的对抗样本能够在诱导模型输出同一语义而不再该语料库中的内容，对模型的文本理解或生成能力产生干扰。
 
-在跨图像迁移性的研究上，AnyDoor 方法的提出进一步推动了对抗样本迁移性研究，特别是在多模态大语言模型中的应用。作为一种后门攻击技术，AnyDoor 利用通用对抗扰动，实现对视觉和语言模态的联合干扰。通过在图像模态中注入通用扰动并结合文本触发策略，该方法展现了卓越的跨模态迁移能力和适应性。实验结果表明，无论在自然图像还是生成图像数据集（如 VQAv2、SVIT 和 DALL-E）中，通用扰动均能成功引发目标模型的预设输出。这些发现表明，跨图像迁移性在多模态场景中具有广泛的适用性和高效性。进一步的研究还验证了视觉对抗样本在多模态模型中的跨语料库迁移能力。Qi和Wang的实验表明，即使仅基于少量有害句子生成对抗图像，这些扰动仍可促使模型生成超出原始语料库范围的有害内容，例如虚假信息传播和暴力指南。此外，Ying等人通过联合优化对抗图像前缀和文本后缀，显著提高了模型在复杂语料库场景下生成有害内容的概率。
+在关于跨图像迁移性的研究上，AnyDoor 方法的提出进一步推动了研究进展。作为一种后门攻击技术，AnyDoor 利用通用对抗扰动，实现对视觉和语言模态的联合干扰。通过在图像模态中注入通用扰动并结合文本触发策略，该方法展现了卓越的跨模态迁移能力和适应性。实验结果表明，无论在自然图像还是生成图像数据集（如 VQAv2、SVIT 和 DALL-E）中，这些通用扰动均能成功引发目标模型的预设输出。这些发现表明，跨图像迁移性在多模态场景中具有广泛的适用性和高效性。进一步的研究还验证了视觉对抗样本在多模态模型中的跨语料库迁移能力。Qi和Wang的实验表明，即使仅基于少量有害句子生成对抗图像，这些扰动仍可促使模型生成超出原始语料库范围的有害内容，例如虚假信息传播和暴力指南。此外，Ying等人通过联合优化对抗图像前缀和文本后缀，显著提高了模型在复杂语料库场景下生成有害内容的概率。
 
-然而，这些方法仅仅对跨数据迁移性进行了展示，并没有深入探索跨数据迁移性的增强方法。
+然而，目前这些方法主要集中于展示跨数据迁移性的现象，却未深入探索如何增强这种侠影。因此，后续有必要开展进一步研究，以开发更有效的方法提高跨数据迁移性。
 
 ## 1.3 研究目标与创新性
 
+本文的研究目标主要针对面向视觉语言模型对抗样本的迁移性，探究目前方法在跨模型迁移性和跨提示迁移性上的不足，并提出高效可用的解决方案，最后形成一套面向视觉语言模型的跨模型和跨提示迁移性的对抗样本生成系统。
 
+本文的创新型首先在于面向视觉语言模型生成对抗样本的时候充分利用文本模态以降低模型对图像模态信息的依赖，以缓解生成的对抗图像集中于源模型的视觉处理缺陷，从而提升跨模型迁移性。其次，本文针对于文本描述攻击中对抗扰动的文本提示量需求大和训练时间长和图像嵌入攻击中难以覆盖图像全部要素的缺点，提出从图像中提取实体、实体相对位置以及背景并将这些元素映射到另一个不同的元素集合，基于映射元素集合构建问答对进行文本描述攻击，以降低训练时间。同时集成最大化对抗图像与原始图像的相似度的图像嵌入攻击，以提升跨提示迁移性。
 
 # 2 研究内容与技术路线
 
