--- a/毕设/开题报告大纲.md
+++ b/毕设/开题报告大纲.md
@@ -26,19 +26,45 @@ Li L. H., Yatskar M., Yin D., et al. Visualbert: A Simple and Performant Baselin
 
 Lu J., Batra D., Parikh D., et al. ViLBERT: Pretraining Task-Agnostic Visiolinguistic Representations for Vision-and-Language Tasks[C]. Conference on Neural Information Processing Systems. 2019: 13-23.
 
+Szegedy C., Zaremba W., Sutskever I., et al. Intriguing Properties of Neural Networks[EB/OL]. arXiv preprint arXiv:1312.6199, 2013.
+
+Dong Y., Chen H., Chen J., et al. How Robust is Google's Bard to Adversarial Image Attacks?[EB/OL]. arXiv preprint arXiv:2309.11751, 2023.
+
+Gu J., Jia X., Jorge P. A Survey on Transferability of Adversarial Examples Across Deep Neural Networks[EB/OL]. arXiv preprint arXiv:2310.17626, 2023.
+
+Mopuri K. R., Garg U., Babu R. V.. Fast Feature Fool: A Data Independent Approach to Universal Adversarial Perturbations[EB/OL]. arXiv preprint arXiv:1707.05572, 2017.
+
+Naseer M., Khan S. H., Rahman S., et al. Task-Generalizable Adversarial Attack Based on Perceptual Metric[EB/OL]. arXiv preprint arXiv:1811.09020, 2018.
+
 ## 1.2 研究现状概述
 
 本文将介绍视觉语言模型中对抗样本在跨模型和跨提示迁移性方面的研究进展。跨模型迁移性指的是在一个模型上生成的对抗样本能够成功误导其他结构不同的模型。跨提示迁移性则强调，对抗样本不仅能在单一文本提示下有效干扰模型，还能在不同文本提示下维持其误导效果。针对视觉语言模型的跨数据迁移性可进一步细分为两类： 跨图像迁移性 和 跨语料库迁移性。其中，跨图像迁移性是指为特定图像生成的对抗样本仍然能够有效地干扰其他图像，从而影响模型预测结果。而跨语料库迁移性则意味着，为某一特定语料库生成的对抗样本能够诱导模型输出同一语义，即便该内容并不包含于原始语料库中。
 
 通过探讨这些不同类型的迁移现象，我们可以深入理解对抗样本如何挑战视觉语言系统，并为开发更强大的防御策略奠定基础。
 
+Zhang C., Xu X., Wu J., et al. Adversarial Attacks of Vision Tasks in the Past 10 Years: A Survey[EB/OL]. arXiv preprint arXiv:2410.23687, 2024.
+
 ### 1.2.1 关于跨模型迁移性的研究
 
 在视觉语言模型领域，对抗样本的跨模型迁移性引起了广泛关注。由于这类模型不仅处理视觉特征，还需结合语言信息，其复杂性使得增强跨模型迁移性的方法更具挑战性。为了解决这一问题，研究者们提出了一系列优化策略，以提升对抗样本在视觉语言模型间的迁移效果。
 
-在集成模型方向，Guo等人提出的 AdvDiffVLM 方法使用自适应集成梯度估计（Adaptive Ensemble Gradient Estimation）来获得目标模型的梯度信息。这一方法通过多个代理模型有效嵌入语义，从而生成对抗图像。Niu等人设计了一种基于最大似然的算法，用于生成图像越狱提示以攻击视觉语言模型。他们采用了包括 Vicuna-7B、Vicuna-13B 和 LLaMA-2-7B 基础上的 MiniGPT-4作为代理模型。此外，Wu等人则通过整合 ViT-B/32、ViT-B/16、ViT-L/14 等 等模型，对多模态智能体进行幻觉攻击与目标误导攻击。Dong等人进一步提出，在生成图像扰动时以 ViT-B/16、CLIP 和 BLIP-2 作为代理模型，并结合 SSA-CWA ）进行攻击，以提升对抗样本的跨模型迁移性。同时，Zhao等人提出采用随机梯度无关方法来估计梯度，成功攻击了未见过的视觉语言模型。从模型对齐的角度，Ma 等人提出了一种微调源模型（的策略，使其输出与一组独立的见证模型的输出接近，然后利用源模型生成对抗样本，从而提升跨模型迁移能力。而Lu 等人提出了 SGA 方法，通过结合跨模态交互和对齐保持的数据增强技术，生成可在黑盒环境中高效攻击多个模型的对抗样本。Han 等人则从最优传输理论出发，将图像和文本集合的特征视为两个分布，通过最优传输计算两者间的最优映射关系，有效缓解过拟合问题，并提升对抗样本的迁移性。
+在集成模型方向，Guo等人提出的 AdvDiffVLM 方法使用自适应集成梯度估计（Adaptive Ensemble Gradient Estimation）来获得目标模型的梯度信息。这一方法通过多个代理模型有效嵌入语义，从而生成对抗图像。Niu等人设计了一种基于最大似然的算法，用于生成图像越狱提示以攻击视觉语言模型。他们采用了包括 Vicuna-7B、Vicuna-13B 和 LLaMA-2-7B 基础上的 MiniGPT-4作为代理模型。此外，Wu等人则通过整合 ViT-B/32、ViT-B/16、ViT-L/14 等 等模型，对多模态智能体进行攻击。Dong等人进一步提出，在生成图像扰动时以 ViT-B/16、CLIP 和 BLIP-2 作为代理模型，并结合 SSA-CWA 进行攻击，以提升对抗样本的跨模型迁移性。同时，Zhao等人提出采用随机梯度无关方法来估计梯度，成功攻击了未见过的视觉语言模型。从模型对齐的角度，Ma 等人提出了一种微调源模型的策略，使其输出与一组独立的见证模型的输出接近，然后利用源模型生成对抗样本，从而提升跨模型迁移能力。
 
-尽管上述方法取得了一定进展，但仍未充分挖掘文本模态所具备的能力。这导致当前的大多数对抗攻击依赖于图像模态的信息，使得生成的对抗图像往往集中于源模型的视觉处理缺陷，从而影响跨模型迁移能力。因此，后续的方法需要考虑如何充分利用文本模态的能力，以提高跨模型迁移能力。
+尽管上述方法取得了一定进展，但仍未充分挖掘文本模态所具备的能力。这导致当前的大多数对抗攻击依赖于图像模态的信息，使得生成的对抗图像往往集中于特定模型的视觉处理缺陷，从而影响跨模型迁移能力。因此，后续的方法需要考虑如何充分利用文本模态的能力，降低对图像模态的信息依赖，以提高跨模型迁移能力。
+
+Guo Q., Pang S., Jia X., et al. Efficiently Adversarial Examples Generation for Visual-Language Models under Targeted Transfer Scenarios using Diffusion Models[EB/OL]. arXiv preprint arXiv:2404.10335, 2024.
+
+Niu Z., Ren H., Gao X., et al. Jailbreaking Attack Against Multimodal Large Language Model[EB/OL]. arXiv preprint arXiv:2402.02309, 2024.
+
+Wu C. H., Koh J. Y., Salakhutdinov R., et al. Adversarial Attacks on Multimodal Agents[EB/OL]. arXiv preprint arXiv:2406.12814, 2024.
+
+Dong Y., Chen H., Chen J., et al. How Robust is Google's Bard to Adversarial Image Attacks?[EB/OL]. arXiv preprint arXiv:2309.11751, 2023.
+
+Chen H., Zhang Y., Dong Y., et al. Rethinking Model Ensemble in Transfer-Based Adversarial Attacks[EB/OL]. arXiv preprint arXiv:2303.09105, 2023.
+
+Zhao Y., Pang T., Du C., et al. On Evaluating Adversarial Robustness of Large Vision-Language Models[C]. Conference on Neural Information Processing Systems. 2023: 54111-54138.
+
+Ma A., Farahmand A., Pan Y., et al. Improving Adversarial Transferability via Model Alignment[C]. European Conference on Computer Vision. 2024: 74-92.
 
 ### 1.2.2 关于跨提示迁移性的研究
 
@@ -50,6 +76,20 @@ Lu J., Batra D., Parikh D., et al. ViLBERT: Pretraining Task-Agnostic Visiolingu
 
 部分研究将图像嵌入作为提升跨提示迁移性的切入点。例如，Dong等人提出一种图像嵌入攻击方法，旨在通过增加对抗图像与原始图像嵌入之间的差异来误导模型。针对可能导致模型输出其他正确描述的风险，Zhao等人提出结合扩散模型将目标文本转换为图像，并通过拉近对抗图像与生成图像嵌入的相似度来进行优化。然而，该种方法在涉及多种对象或者背景复杂的图像中，难以覆盖图像的全部要素，导致跨提示迁移性性能不好。
 
+Lu Y., Jia Y., Wang J., et al. Enhancing Cross-Task Black-Box Transferability of Adversarial Examples with Dispersion Reduction[C]. IEEE/CVF Conference on Computer Vision and Pattern Recognition. 2020: 937-946.
+
+Nakka K. K., Salzmann M. Learning Transferable Adversarial Perturbations[C]. Conference on Neural Information Processing Systems. 2021: 13950-13962.
+
+Bailey L., Ong E., Russell S., et al. Image Hijacks: Adversarial Images can Control Generative Models at Runtime[EB/OL]. arXiv preprint arXiv:2309.00236, 2023.
+
+Lu D., Pang T., Du C., et al. Test-Time Backdoor Attacks on Multimodal Large Language Models[EB/OL]. arXiv preprint arXiv:2402.08577, 2024.
+
+Luo H., Gu J., Liu F., et al. An Image Is Worth 1000 Lies: Transferability of Adversarial Images across Prompts on Vision-Language Models[C]. International Conference on Learning Representations. 2024: 1-22.
+
+Dong Y., Chen H., Chen J., et al. How Robust is Google's Bard to Adversarial Image Attacks?[EB/OL]. arXiv preprint arXiv:2309.11751, 2023.
+
+Zhao Y., Pang T., Du C., et al. On Evaluating Adversarial Robustness of Large Vision-Language Models[C]. Conference on Neural Information Processing Systems. 2023: 54111-54138.
+
 ### 1.2.3 关于跨数据迁移性的研究
 
 随着视觉语言模型在自然语言处理和计算机视觉领域展现出卓越性能，研究者开始关注其对抗样本的跨数据迁移性。鉴于视觉语言模型具备处理多模态数据的能力，相关研究将针对视觉语言模型的对抗样本迁移性分为两类：跨图像迁移性和跨语料库迁移性。跨图像迁移性是指针对特定图像生成的对抗样本能够在其他图像上继续有效，误导模型的预测结果。跨语料库迁移性是指针对某一语料库生成的对抗样本能够在诱导模型输出同一语义而不再该语料库中的内容，对模型的文本理解或生成能力产生干扰。
@@ -58,11 +98,19 @@ Lu J., Batra D., Parikh D., et al. ViLBERT: Pretraining Task-Agnostic Visiolingu
 
 然而，目前这些方法主要集中于展示跨数据迁移性的现象，却未深入探索如何增强这种侠影。因此，后续有必要开展进一步研究，以开发更有效的方法提高跨数据迁移性。
 
+Lu D., Pang T., Du C., et al. Test-Time Backdoor Attacks on Multimodal Large Language Models[EB/OL]. arXiv preprint arXiv:2402.08577, 2024.
+
+Qi X., Huang K., Panda A., et al. Visual Adversarial Examples Jailbreak Aligned Large Language Models[C]. Conference on Innovative Applications of Artificial Intelligence. 2024: 21527-21536.
+
+Wang R., Ma X., Zhou H., et al. White-Box Multimodal Jailbreaks Against Large Vision-Language Models[C]. Conference on Multimedia. 2024: 6920-6928.
+
+Ying Z., Liu A., Zhang T., et al. Jailbreak Vision Language Models via Bi-Modal Adversarial Prompt[EB/OL]. arXiv preprint arXiv:2406.04031, 2024.
+
 ## 1.3 研究目标与创新性
 
-本文的研究目标主要针对面向视觉语言模型对抗样本的迁移性，探究目前方法在跨模型迁移性和跨提示迁移性上的不足，并提出高效可用的解决方案，最后形成一套面向视觉语言模型的跨模型和跨提示迁移性的对抗样本生成系统。
+本文的研究目标主要集中在视觉语言模型对抗样本的迁移性，旨在探究现有方法在跨模型迁移性和跨提示迁移性方面的不足，并提出高效可行的解决方案。最终，本文将构建一套针对视觉语言模型的对抗样本生成系统，以实现跨模型和跨提示迁移性的提升。
 
-本文的创新型首先在于面向视觉语言模型生成对抗样本的时候充分利用文本模态以降低模型对图像模态信息的依赖，以缓解生成的对抗图像集中于源模型的视觉处理缺陷，从而提升跨模型迁移性。其次，本文针对于文本描述攻击中对抗扰动的文本提示量需求大和训练时间长和图像嵌入攻击中难以覆盖图像全部要素的缺点，提出从图像中提取实体、实体相对位置以及背景并将这些元素映射到另一个不同的元素集合，基于映射元素集合构建问答对进行文本描述攻击，以降低训练时间。同时集成最大化对抗图像与原始图像的相似度的图像嵌入攻击，以提升跨提示迁移性。
+本文的创新之处首先体现在充分利用文本模态来生成对抗图像，从而降低模型对图像模态信息的依赖。这种策略能够有效环节生成对抗图像时集中于源模型视觉处理缺陷的问题，进而提升其跨模型迁移能力。其次，针对文本描述攻击中存在的大量文本提示需求、较长训练时间，以及图像嵌入攻击难以覆盖所有图像要素等问题，我们提出了一种新颖的方法：从图像中提取实体、实体相对位置以及背景信息，并将这些元素映射到另一个不同元素集合上。基于这一映射元素集合，我们构建问答对进行文本描述攻击，以减少训练时间。同时，通过集成最大化对抗图像与原始图像之间相似度的技术，我们进一步提升跨提示迁移性能。
 
 # 2 研究内容与技术路线
 
