--- a/Travel/调研.md
+++ b/Travel/调研.md
@@ -1,4 +1,4 @@
-**AppBench**
+### AppBench
 
 包含15个功能（代码不是按app分的，按功能分的），每个功能至少包含一个api：
 
@@ -6,17 +6,107 @@
 "Hotels", "Rents", "Buses", "Events", "Flights", "Homes", "Media", "Movies", "Music", "Payment", "Restaurants", "Services", "Trains", "Travel", "Weather"
 ```
 
-**辅助决策（混合型对话）**
+### 辅助决策（多轮对话）
 
-<img src="C:\Users\DengBin\AppData\Roaming\Typora\typora-user-images\image-20241127214308499.png" alt="image-20241127214308499" style="zoom:50%;" />
+**Tell Me More**：通过提示工程，利用大模型来判断用户任务的清晰度，识别出任务中的模糊部分以及缺失的重要细节，并**按照优先级进行划分**。随后，生成有针对性的追问问题以帮助用户明确任务需求。
 
-## AppBench+辅助决策+工作流记忆
+https://arxiv.org/abs/2402.09205
 
-**想法1**：基于美团的数据构建一些类似AppBench的需求指令（例子如下，限制需要多且复杂），然后用一个大模型（gpt-4）基于需求指令模拟用户逐步向智能助手输出需求，然后去评估智能助手调用api的效率（这里就类似appbench）。其中，智能助手就可以将某些任务的流程做成工作流记忆，保证调用api的稳定性。
+**Learning to Ask**：跟Tell Me More类似，通过提示工程让大模型**反思**进行追问。
+
+https://arxiv.org/abs/2409.00557
+
+**Ask-Before-Plan**：将**辅助决策做成agent**，先对用户提出的需求通过调用工具进行合理判断，判断合理之后再进行追问。
+
+<img src="/Users/dengbin/Library/Application Support/typora-user-images/image-20241128105754631.png" alt="image-20241128105754631" style="zoom:30%;" />
+
+https://arxiv.org/abs/2406.12639
+
+**Navigating the Unknown**：用multiagent来做辅助决策（我觉得没必要，实现过于冗余，很多功能可以结合）
+
+<img src="/Users/dengbin/Library/Application Support/typora-user-images/image-20241128111628210.png" alt="image-20241128111628210" style="zoom:30%;" />
+
+https://arxiv.org/abs/2410.24032
+
+**Proactive Agent**：将辅助决策中的“主要提问”这个概念转移至执行任务中的“主动提问是否执行”
+
+<img src="/Users/dengbin/Library/Application Support/typora-user-images/image-20241128113055173.png" alt="image-20241128113055173" style="zoom:40%;" />
+
+https://arxiv.org/abs/2410.12361
+
+
+
+### 工作流
+
+主要集中在**生成工作流**上
+
+**WorkflowLLM**：从 Apple Shortcuts 和 RoutineHub 平台爬取工作流数据。利用大模型解析每个工作流的描述及其功能。将这些解析结果构建成一个全面的数据集。模型微调。（“工作流”是指为**实现特定任务而执行的一系列 API 调用的有序组合**）
+
+https://arxiv.org/abs/2411.05451
+
+**AutoFlow**：通过执行生成的工作流进行强化学习。
+
+<img src="/Users/dengbin/Library/Application Support/typora-user-images/image-20241128125651921.png" alt="image-20241128125651921" style="zoom:50%;" />
+
+https://arxiv.org/abs/2407.12821
+
+**Agent Workflow Memory**
+
+https://arxiv.org/abs/2409.07429
+
+
+
+### 其他
+
+**Human-Like Reasoning Framework**：通过分阶段规划和反思进行旅游计划生成
+
+https://arxiv.org/pdf/2405.18208
+
+**在Travelplanner上增加了用户画像使得旅游规划的推荐更加个性化（基本上就是）**
+
+https://aclanthology.org/2024.emnlp-industry.37.pdf
+
+
+
+### 想法
+
+**到店到餐等执行任务+用户画像+工作流记忆+辅助决策**：
+
+利用美团的数据创建复杂的执行任务，如购买门票、预约餐厅、预订房间等。
+
+为每个任务自动生成详细的用户画像，以精准捕捉用户需求和行为特征。
+
+大模型基于用户画像和任务目标进行用户模拟。
+
+辅助模型通过（工作流记忆）建立任务API调用的工作流记忆，保障执行过程的稳定性和一致性 + （辅助决策）先对用户提出的需求通过调用工具进行合理判断，判断合理之后再进行追问。
 
 ```
-Please make a reservation for 3 people at Stone Korean Kitchen in San Francisco for Korean Barbeque with outdoor seating at 1:30 pm on March 12th, and also book a Luxury taxi for 3 to 4 Embarcadero Center.
+persona：xxxx
+
+task goal：Please make a reservation for 3 people at Stone Korean Kitchen in San Francisco for Korean Barbeque with outdoor seating at 1:30 pm on March 12th, and also book a Luxury taxi for 3 to 4 Embarcadero Center.
 请预订 3 月 12 日下午 1:30 在旧金山 Stone Korean Kitchen 的韩国烧烤（带露天座位），并预订 3 至 4 人 Embarcadero Center 的豪华出租车。
+
+
+工作流：餐厅预订
+查找餐厅信息: 确认Stone Korean Kitchen的联系方式和地址。
+联系餐厅: 通过电话或在线平台进行预订。提供预订详情（人数、时间、座位类型等）并确认预订成功。
+获取预订确认号: 获取餐厅的预订确认号确认。
+
+工作流：交通安排
+选择豪华出租车公司: 根据用户评价和服务质量选择合适的豪华出租车公司。
+预定出租车:
+	提供行程细节（出发地点和时间、目的地）。
+	确认车辆类型为豪华出租车，并适合3至4名乘客。
+获取出租车预订确认: 获取出租车的预订确认号或短信确认。
 ```
 
-**WorkflowLLM**：从Apple Shortcuts and RoutineHub爬取工作流数据，通过大模型将工作流->将节点做成api->将api+comment做成自然语言工作流->生成用户问题
+
+
+
+
+
+
+
+
+
+
